core/derive/tests/ui/fail/allocate_using_enum.rs
use ink_core_derive::AllocateUsing;

#[derive(AllocateUsing, Debug, PartialEq, Eq)]
enum Enum {
    A,
    B,
    C,
}

fn main() {}
