core/derive/tests/ui/fail/allocate_using_enum.stderr
error: proc-macro derive panicked
 --> $DIR/allocate_using_enum.rs:3:10
  |
3 | #[derive(AllocateUsing, Debug, PartialEq, Eq)]
  |          ^^^^^^^^^^^^^
  |
  = help: message: cannot derive AllocateUsing for enums
